2009-02-24  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* gif handler cleanup
	* Allow -index N option for TIFF images too [Feature Request #706277]

2009-02-23  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Attempt to fix HP-UX Itanium 64-bit build
	* revert r177 change to pkgIndex.tcl: it broke TEApot package
	  handling.

2009-02-17  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Move ./libz to ./compat/zlib and ./libz/tcl to ./zlib
	* Move ./libjpeg to ./compat/libjpeg and ./libjpeg/tcl to ./libjpeg
	* Move ./libpng to ./compat/libpng and ./libpng/tcl to ./libpng
	* Move ./libtiff to ./compat/libtiff and ./libtiff/tcl to ./libtiff
	* Require Tcl/Tk 8.3 for libz, libpng, libtiff and libjpeg

2009-01-12  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to libpng 1.2.34

2009-01-12	Jan Nijtmans <nijtmans@users.sourceforge.net>

	* No longer Panic when an out-of-memory error occurs,
	  when compiled with Tcl/Tk 8.5 or later and running with
	  Tcl/Tk 8.5 and later (Tk bug #2477446)

2009-01-05  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Two more stub functions for improved Tcl 8.5 support.
	* Make sure that in C preprocessor directives the "#"
	  character is the first character on the line.

2008-11-13  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* For gcc, from now on use as standard CFLAGS:
	    CFLAGS_OPTIMIZE="-O2 -fomit-frame-pointer"
	    CFLAGS_WARNING="-Wall -Wwrite-strings"
	* Upgrade to GNU Autoconf 2.63

2008-11-13  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Create 1.3.x branch. Now trunk is available for
	  tkImg 1.4 development.

2008-11-13  Andreas Kupries <andreask@activestate.com>

	* Fix win32 compile issue with zlib, mask gzprintf
    
2008-11-04	Paul Obermeier <obermeier@users.sourceforge.net>

	* Added new (visual) test suite for checking the different
	  ways of reading and writing images in the various formats.

2008-11-04	Paul Obermeier <obermeier@users.sourceforge.net>
