@@ -1013,7 +1013,7 @@ declare 317 generic {!PNG_INTERNAL !PNG_PROGRESSIVE_READ_SUPPORTED !PNG_iTXt_SUP
     void png_push_read_iTXt (png_structp png_ptr, png_infop info_ptr, png_uint_32 length)
 }
 declare 318 generic {
-    void png_info_init_3 (png_infop info_ptr, png_size_t png_info_struct_size)
+    void png_info_init_3 (png_infopp info_ptr, png_size_t png_info_struct_size)
 }
 
 #########################################################################
